# ert3d_test2

./: .gitignore  build_3dert_test2.py  build_3dert_test2_easy.py  plot_3dert_test2.py  preview.m  pyproject.toml
dataset_preview/: pointcloud_sample0.html  pointcloud_sample0_overlay.html
eval/: eval_unet.ipynb  eval_unet.py  eval_unet_easy.py  eval_unet_slices.py  eval_unet_voxel.py  eval_vae.ipynb
eval/noise/: noise_model.py
eval/ood/: eval_fixed_samples.py  eval_ood_easy.py  eval_ood_voxel.py
eval/ood/fine_grid/: eval_easy.py  eval_voxel.py
eval/ood/two_inclusions/: eval_easy.py  eval_voxel.py
models/VAE/: cnn.py  default.py
models/unet/: __init__.py  default.py  modules.py  modules3d.py  unet3d.py
notebooks/: test_vae_unet.ipynb
plot/: noise_robustness.py  noise_robustness_easy.py  noise_robustness_ood.py  noise_robustness_ood_easy.py  plot_3dert_test2.py  plot_sigma_scatter.py
train/: util.py
train/VAE/: grid_search.py  train_VAE.py  train_VAE_unet.py  train_VAE_unet_subsampled_dataset.py  util.py
train/encoder/: grid_search.py  train_unet.py  util.py
train/no_encoder/: grid_search.py  train_unet.py  util.py
