[project]
name = "samples-onlysurface"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "einops>=0.8.2",
    "itables>=2.7.1",
    "kaleido>=1.2.0",
    "matplotlib>=3.10.8",
    "modal>=1.3.5",
    "nbformat>=5.10.4",
    "pandas>=3.0.1",
    "plotly>=6.5.2",
    "polars>=1.38.1",
    "pyarrow>=23.0.1",
    "scipy>=1.17.1",
    "torch>=2.10.0",
    "tqdm>=4.67.3",
]
